<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Payworks GmbH (http://www.payworks.com)
  ~
  ~ The MIT License (MIT)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->
<resources>
    <string name="app_name">Pay Button Sample</string>
    <string name="title_activity_checkout">Pay Button Sample</string>
    <string name="option_signature_required">Charge 108.20€\nSignature required</string>
    <string name="header_mock">MOCK: Simulated internet and card reader</string>
    <string name="option_application_selection">Charge 113.73€\nApplication selection required</string>
    <string name="option_transaction_declined">Charge 110.40€\nTransaction fails</string>
    <string name="option_ask_for_tip">Charge 105€\nAsk for tip, input 1€</string>
    <string name="header_test">TEST : Test environment and real card reader</string>
    <string name="header_init">Initialization</string>
    <string name="header_acquirer">Acquirer</string>
    <string name="option_e105">Charge 13.37€ on a E105</string>
    <string name="option_read_card">Read Card</string>
    <string name="option_wisepad">Charge 13.37€ on a WisePad</string>
    <string name="option_miura">Charge 13.37€ on a MIURA</string>
    <string name="option_miura_preauthorize">Pre-Authorize 13.37€ on a MIURA</string>
    <string name="option_miura_with_tip">Charge 13.37€ on a MIURA\nAsk for tip</string>
    <string name="header_last_transaction">Last transaction</string>
    <string name="option_last_summary">Show summary of last transaction</string>
    <string name="option_last_refund">Refund last transaction</string>
    <string name="option_last_capture">Capture last transaction</string>
    <string name="option_last_print">Print last transaction</string>
    <string name="info">Info</string>
    <string name="info_pw_paybutton">Payworks Pay Button</string>
    <string name="info_body"><![CDATA[
        The Payworks Pay Button makes the integration of card acceptance into your app insanely easy!<br/><br/>
        <a href=\'http://www.payworks.mpymnt.com/paybutton#android\'>Pay Button</a>&nbsp;&nbsp;
        <a href=\'http://payworks.com\'>Website</a>&nbsp;&nbsp;
        <a href=\'https://github.com/payworks\'>GitHub</a>
    ]]></string>
    <string name="init_with_concardis">Initialize with ConCardis</string>
    <string name="init_with_mcashier">Initialize with mCashier</string>
    <string name="init_with_secure_retail">Initialize with Secure Retail</string>
    <string name="init_with_yourbrand">Initialize with YourBrand</string>
    <string name="init_with_provider">Initialize with Provider</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="init_with_barclaycard">Initialize with Barclaycard</string>

</resources>
