<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ mpos-ui : http://www.payworksmobile.com
  ~
  ~ Copyright (c) 2015 payworks GmbH
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sdk_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="SDK version:"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_mock"
            android:textColor="#707070"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="4dp"
            android:background="#707070"/>

        <TextView
            style="@style/CheckoutButton"
            android:id="@+id/transaction_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff9800"
            android:text="@string/option_signature_required"
            />

        <TextView
            style="@style/CheckoutButton"
            android:id="@+id/transaction_application_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8bc34a"
            android:text="@string/option_application_selection"
            />

        <TextView
            style="@style/CheckoutButton"
            android:id="@+id/transaction_declined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_transaction_declined"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/header_test"
            android:textColor="#707070"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="4dp"

            android:background="#707070"/>

        <TextView
            style="@style/CheckoutButton"
            android:id="@+id/transaction_e105_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_e105"
            />

        <TextView
            style="@style/CheckoutButton"
            android:id="@+id/transaction_miura_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_miura"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/header_last_transaction"
            android:textColor="#707070"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="4dp"

            android:background="#707070"/>

        <TextView
            style="@style/CheckoutButton"
            android:id="@+id/summary_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_last_summary"
            />

        <TextView
            style="@style/CheckoutButton"
            android:id="@+id/refund_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_last_refund"
            />

    </LinearLayout>
</ScrollView>
